syntax = "proto3";

package app.v1.user;

import "buf/validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/eliofery/golang-grpc/pkg/api/app/v1/user";

message GetUserByIDRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "GetUserByIDRequest"
      description: "Get user by ID request"
      required: "id"
    }
  };

  int64 id = 1 [
    (buf.validate.field).int64.gte = 0,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      title: "ID"
      description: "User ID"
    }
  ];
}
